Korrektur von Anne D. zum Text Auswahl der Experten

--- a/sections/Methodik/experten.tex
+++ b/sections/Methodik/experten.tex
@@ -1,13 +1,16 @@
 \subsection{Auswahl der Experten}
 
-Für das Experteninterview wurden Christoph Rahles, Alexander Troppman und Sebastian Schlaak befragt. Es wurde sich für sie entschieden, da alle drei jahrelange Erfahrung im Bereich der Microservicearchitektur haben und seit vielen Jahren in der Start-up-Branche arbeiten. Sowohl Herr Rahles, Herr Troppman und Herr Schlaak sind Senior Software Developer mit Erfahrungen im Management. So haben alle drei mehre Jahre als Chief Technology Officer (CTO) gearbeitet und können fundierte Aussagen über Software architektonische Entscheidungen geben. Darüber hinaus hält Herr Troppman Vorträge in denen er erklärt, wie man mit Hilfe der Programmiersprache Golang leichtgewichtige Microservices erstellt kann.
+Für das Interview wurden Christoph Rahles, Alexander Troppman und Sebastian Schlaak befragt.
+Diese Experten wurden aufgrund ihrer jahrelangen Erfahrung im Bereich der Microservicearchitektur und Start-up-Branche ausgewählt. Sowohl Herr Rahles, Herr Troppman und Herr Schlaak sind Senior Software Developer mit Erfahrungen im Management. So haben alle drei mehre Jahre als Chief Technology Officer (CTO) gearbeitet und können fundierte Aussagen über Software architektonische Entscheidungen geben. Darüber hinaus hält Herr Troppman Informationsveranstaltungen in denen er erklärt, wie man mit Hilfe der Programmiersprache Golang leichtgewichtige Microservices erstellt kann.
+
+%Todo Größe und Kontext der Vorträge anbringen, da es sonst keinen Wert bekommt. Hier sollte Meetup, technische Plattform und 100 angemeldete Zuschauer angesprochen werden.
 
 Des Weiteren wurden alle drei ausgewählt, da sie PluraPolit kennen und bei der Entwicklung beteiligt waren. So hat Herr Rahles insbesondere in der Anfangsphase PluraPolit geholfen, die Softwarearchitektur mit aufzubauen und kennt diese detailliert.
 
-Mit Herrn Trapper hat PluraPolit erst vor kurzen gemeinsam in einem Hackathon gearbeitet. Bei diesem wurde die Plattform konzeptionell weiter entwickelt, sodass sie auch für den Schulunterricht eingesetzt werden kann. Folglich kennt auch Herr Troppman den aktuellen Stand der Bildungsplattform.
+Herr Troppman und die Mitarbeiter von PluraPolit haben erst vor einigen Wochen gemeinsam an einem Hackathon teilgenommen und die Plattform konzeptionell weiter entwickelt. Es wurden Entwürfe erstellt, wie PluraPolit auch für den Schulunterricht eingesetzt werden kann. Folglich kennt Herr Troppman den aktuellen Stand der Bildungsplattform.
 
-Mit Herrn Schlaak stand PluraPolit gelegentlich im Austausch. Sowohl ich als auch Robin Zuschke haben vor der Zeit bei PluraPolit mit Herrn Schlaak zusammen gearbeitet und sind seitdem im freundschaftlichen Kontakt. Folglich kannte Herr Schlaak PluraPolit. 
+Sowohl ich als auch Robin Zuschke haben vor der Zeit bei PluraPolit mit Herrn Schlaak zusammen gearbeitet und standen gelegentlich mit Herr Schlaak im Austausch. Demnach kannte Herr Schlaak vor dem Interview den technischen Standpunkt und die internen Abläufe.
 
-Auch kannten sich Herr Schlaak und Herr Rahles vor dem Interview. Sie haben von 2011 bis 2013 gemeinsam bei Käuferportal gearbeitet und sind seitdem befreundet. Es wurde jedoch darauf geachtet, dass sie sich vor den Interviews nicht austauschen und ihre Antworten unabhängig gegeben wurden.
+Herr Rahles und Herr Schlaak kannten sich vor dem Interview, da sie von 2011 bis 2013 gemeinsam bei Käuferportal gearbeitet haben. Aufgrund dessen, dass die zwei Experten nach den gemeinsamen Arbeitsjahren in regelmäßigem Kontakt standen, wurden sie gebeten, sich nicht über die Inhalte des Interviews auszutauschen, sodass die Unabhängigkeit ihrer Antworten gewährleistet werden konnte.
 
 Ausgenommen der Verbindung zwischen Herrn Rahles und Herrn Schlaak, kannten sich die Experten nicht.
