Korrektur von Anne D. zum Text Durchfuehrung wurde eingefuegt

--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -1,12 +1,12 @@
 \subsection{Durchführung des Interviews}
 
-Die drei Kandidaten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem online Gespräch eingeladen. Es wurde sich für eine Konferenzgespräch von Angesicht zu Angesicht entschieden, um eine persönlichere Atmosphäre zu erzeugen und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten. Hinzu kam das Herr Troppman in München wohnte und ein Gespräch nur online möglich war.
+Die drei Experten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem Gespräch eingeladen, welches online stattfinden sollte. Es wurde ein Konferenzgespräch von Angesicht zu Angesicht gewählt, um eine persönlichere Atmosphäre zu generieren und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten. Hinzu kam, dass Herr Troppman in München wohnte und ein Gespräch nur online möglich war.
 
-Alle drei Kandidaten wurden die Fragen vorab zugeschickt, sodass sie sich vorbereiten konnten. Auch wurden sie vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Transkripierung zu vereinfachen. Dies geschah zum einen bei den Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren wurde sich von den Experten eine mündliche Bestätigung eingeholt, dass ihre Aussagen in der Bachelor Thesis verwendet werden dürfen.
+Alle Interviewpartner bekamen die Fragen zur Vorbereitung vorab zugeschickt. Sie wurden vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Transkripierung zu vereinfachen. Dies geschah zum einen während der Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren gaben die Experten eine mündliche Bestätigung ab, dass ihre Aussagen in der Bachelor Thesis verwendet werden dürfen.
 
-Während der Interviews wurden Notizen erstellt, um die Antworten zu erfassen. Vereinzelt wurde dem Experten Rückfragen gestellt, um weitere Informationen zu erhalten.
+Um während des Interviews Rückfragen zu stellen, wurden zusätzlich zur laufenden Aufzeichnung kurze Notizen erstellt.
 
-Die Interviews wurden nacheinander gehalten. Das erste Interview wurde mit Christoph Rahles am 18 Juni 2020 gehalten, gefolgt von Alexander Troppman am 21 Juni und Sebastian Schlaak am 24 Juni. 
+Die Interviews wurden nacheinander gehalten. Der erste Interviewpartner war Christoph Rahles am 18 Juni 2020 gehalten, gefolgt von Alexander Troppman am 21 Juni und Sebastian Schlaak am 24 Juni.
 
 In allen drei Fällen hat das Interview mit folgender Frage gestartet:
 
@@ -14,15 +14,15 @@ In allen drei Fällen hat das Interview mit folgender Frage gestartet:
 
 Mit dieser Frage sollte die Annahme beantwortet werden, dass es überhaupt Bedingungen gibt. Weiterführend sollte den Experten die Möglichkeit gegeben werden, ohne jegliche Einschränkung notwendige Bedingungen zu nennen.
 
-In zwei der drei Interviews (Christoph Rahles und Alexander Troppman) wurde nach der ersten Frage die vierte Frage eingeschoben. Dies bot sich an, da beide Experten in ihren Antworten sich thematisch dieser Fragestellung angenähert haben.
+In zwei der drei Interviews (Christoph Rahles und Alexander Troppman) wurden nach der ersten Frage die vierte Frage eingeschoben. Dies bot sich an, da beide Experten sich thematisch der besagten Fragestellung annäherten.
 
-Als zweite Frage im Fall von Herrn Schlaak, bzw. als dritte Frage im Fall von Herrn Rahles und Troppman, wurde folgendes gestellt:
+Es folgte Frage zwei:
 
 \textit{Welche Rahmen Bedingungen sehen Sie als notwendig, dass Teams separat von einander Arbeiten können?}
 
-Eingeleitet wurde diese Frage mit den Erkenntnissen aus der Literaturrecherche, dass Microservices es Teams ermöglichen unabhängig von einander an unterschiedlichen Services zu arbeiten.
+Eingeleitet wurde diese Frage mit den Erkenntnissen aus der Literaturrecherche, dass Microservices es Teams ermöglichen, unabhängig von einander an unterschiedlichen Services zu arbeiten.
 
-Diese Zusammenfassung wurde eingeschoben, um zum einen den Experten die Möglichkeit zu geben, die Annahme zu berichtigen und sich bei ihren Antworten darauf zu beziehen.
+Diese Zusammenfassung sollte den Experten als Möglichkeit dienen, diese Annahme zu berichtigen und sich bei ihren Antworten darauf zu beziehen.
 
 Die Frage zielte darauf ab, die Auffassung zu valideren, dass:
 \begin{enumerate}
@@ -31,11 +31,13 @@ Die Frage zielte darauf ab, die Auffassung zu valideren, dass:
 \end{enumerate}
 Es wurde sich für eine möglichst offene Frage entschieden, um die Relevant dieser Hypothese zu ermitteln.
 
-Anschließend zur Frage zwei wurde Frage drei gestellt:
+%Todo Relevanz genauer beschreiben
+
+Anschließend wurde Frage drei gestellt:
 
 \textit{Gibt es in Ihren Augen irgendwelche technischen Anforderungen die PluraPolit erfüllen sollte? }
 
-Diese Frage wurde gestellt, um Bedingung fünf, sechs und sieben zu überprüfen (siehe \cref{sec:bedingungen}). Demnach wurde erwartet, dass ein Netzwerk: 
+Frage drei zielte darauf ab, Bedingung fünf, sechs und sieben zu überprüfen (siehe \cref{sec:bedingungen}). Demnach wurde erwartet, dass ein Netzwerk: 
 
 \begin{enumerate}
 	\item die Kommunikation zwischen den Services ermöglicht,
@@ -43,14 +45,14 @@ Diese Frage wurde gestellt, um Bedingung fünf, sechs und sieben zu überprüfen
 	\item ein hohen Datendurchsatz besitzt.
 \end{enumerate}
 
-Die Frage wurde möglichst offen gestellt, sodass die Experten ihre Erfahrung einbringen konnten und weitere Anforderungen nennen.
+Auch hier wählte man bewusst die offene Fragestellung, in der Hoffnung, dass die Experten ihre Erfahrung einbringen.
+%Die Frage wurde möglichst offen gestellt, sodass die Experten ihre Erfahrung einbringen konnten und weitere Anforderungen nennen.
 
 Frage vier ging der Fragestellung nach, ob Microservices in einem dynamischen Umgeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
 
 \textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich durch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen.}
 
-Die Zusammenfassung wurde eingefügt, um den Schwerpunkt der Fragestellung auf die Phasen eines Start-up zu lenken.
-Das Ziel dieser Frage war es, den Zeitpunkt, oder das Ereignis zu ermitteln, ab wann ein Start-up Microservices verwenden sollte. Ging der Experte nicht von selbst auf diese Fragestellung ein, wurde im Interview nachgefragt.
+Die Zusammenfassung sollte den Schwerpunkt der Fragestellung auf die Phasen eines Start-up lenken. Das Ziel dieser Frage war es, den Zeitpunkt, oder das Ereignis zu ermitteln, ab wann ein Start-up Microservices verwenden sollte. Ging der Experte nicht von selbst auf diese Fragestellung ein, gab es zusätzliche Fragen im Interview.
 
 Abschließend wurde das Interview mit folgender Frage beendet:
 
