Korrektur von Anne D. zum Text Methodik der Auswertung wurde eingefuegt

--- a/sections/Methodik/analyse.tex
+++ b/sections/Methodik/analyse.tex
@@ -1,9 +1,9 @@
 \subsection{Methodik zur Auswertung}
 
-Um die Interviews zu transkribieren, wurde der Dient \textit{Amazon Transcribe} von Amazon Web Services verwendet. Es handelt sich bei um ein Service, der automatisch, Audioaufzeichnungen in Text, konvertiert und diesen zurück gibt.
+Um die Interviews zu transkribieren, wurde der Dienst \textit{Amazon Transcribe} von Amazon Web Services genutzt. Es handelt sich dabei um einen Service, der automatisch Audioaufzeichnungen in Text konvertiert und diesen ausgibt.
 
-Nach dem automatischen Transkribieren wurden die Texte noch einmal korrigiert und überprüft.
+Nach dem automatischen Transkribieren wurden die Texte einer manuellen Korrektur unterzogen.
 
-Die einzelnen Aussagen aus den Interviews wurden offen codiert und anschließend in Themen zusammengefasst. Darauf folgend wurden diese Themen einzelnen Kategorien zugeordnet und sie weiterführend besser vergleichen zu können.
+Die einzelnen Aussagen aus den Interviews wurden offen codiert und anschließend in Themen zusammengefasst. Zur besseren Vergleichbarkeit ordnete man  diese Themen einzelnen Kategorien zu.
 
 Abschließend wurden die Informationen aus den Interviews mit den Ergebnissen der Literaturrecherche verglichen und zu Erkenntnissen zusammengefasst. Mit Hilfe dieser Erkenntnissen wurde abschließend die Forschungsfrage beantwortet.
