Korrektur von Anne D. zum Text Frage1

--- a/sections/Methodik/ergebnisse/frage4.tex
+++ b/sections/Methodik/ergebnisse/frage4.tex
@@ -17,4 +17,9 @@ Sowohl Herr Rahles, als auch Herr Troppman antworteten, dass die Unternehmenszie
 
 Nach Herrn Schlaak sollte besonders, dann über eine Microservicearchitektur nachgedacht werden, wenn neue \textit{\enquote{Funktionen […] nichts mehr mit dem Kerngeschäft zu tun haben […]}} (siehe \combref{appendix:s-25}). Diese Aussage wird von Christoph Rahles geteilt. \textit{\enquote{Meistens ist es so, dass man mit einem Monolithen anfängt und irgendwann an ein Punkt kommt, […] wo man sagt, es macht Sinn Dinge auszulagern.}} (siehe \combref{appendix:r-9}).
 
+%Todo noch einmal überarbeiten
+Daraus lässt sich folgern, dass die Entscheidung zur Umstellung davon abhängt, ob ein Unternehmen Dienste aus verschiedenen Aufgabenfelder anbietet.
+
+Aufgabenfeld
+
 %Todo Einfügen der Schlussfolgerung, dass die Entscheidung von der Komplexität der Geschäftsprozesse abhängt. GGf. anderes Wort für Komplexität.
