Korrektur von Anne D zur Frage 3 wurde eingefuegt

--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -35,7 +35,7 @@ Es wurde sich für eine möglichst offene Frage entschieden, um die Relevant die
 
 Anschließend wurde Frage drei gestellt:
 
-\textit{Gibt es in Ihren Augen irgendwelche technischen Anforderungen die PluraPolit erfüllen sollte? }
+\textit{Gibt es in Ihren Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte? }
 
 Frage drei zielte darauf ab, Bedingung fünf, sechs und sieben zu überprüfen (siehe \cref{sec:bedingungen}). Demnach wurde erwartet, dass ein Netzwerk: 
 
