--- a/sections/Methodik/ergebnisse/frage3.tex
+++ b/sections/Methodik/ergebnisse/frage3.tex
@@ -1,23 +1,21 @@
 \subsubsection{Frage 3}
 
-\textit{Gibt es in Ihren Augen irgendwelche technischen Anforderungen die PluraPolit erfüllen sollte?}
+\textit{Gibt es in Ihren Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte?}
 
-Als wohl wichtigste technische Anforderung stellt sich das Monitoring heraus. Demnach beschrieben alle drei Experten, die Notwendigkeit die Kommunikation der Services zu Monitoren (siehe \combref{appendix:t-32} und \combref{appendix:s-16}). Besonders Herr Rahles verwies auf diese Bedingung hin.\footnote{
+Als wohl wichtigste technische Anforderung stellte sich das Monitoring heraus. Demnach beschrieben alle drei Experten die Notwendigkeit ein Monitoring zu implementieren, durch welches die Kommunikation zwischen den Services überwacht werden kann (siehe \combref{appendix:t-32} und \combref{appendix:s-16}). Besonders Herr Rahles verwies auf diese Bedingung.\footnote{
 \textit{\enquote{Monitoring ist das A und O. Das heißt mit Anstieg der Komplexität, muss ich sicher sein, dass ich auch diese Komplexität hinreichend überblicken kann.}} (siehe \combref{appendix:r-31})
 }
 
-Auch Sicherheit wurde von Herrn Rahles als Grundvoraussetzung gesehen. Dabei sah er es jedoch als Grundvoraussetzung für jegliche Infrastruktur und nicht nur explizit für Microservices.\footnote{
+Auch die Sicherheit wurde von Herrn Rahles als Grundvoraussetzung angemerkt. Dabei sah er es als Grundvoraussetzung für jegliche Infrastruktur und nicht explizit für Microservices.\footnote{
 \textit{\enquote{Sicherheit gehört für mich zu den Grundvoraussetzungen, egal über welche Architektur wir reden.}} (siehe \combref{appendix:r-32})
 }
 
-Herr Schlaak und Herr Rahles hoben beide ein gut implementiertes Fehlermanagement hervor. So beschrieb Herr Schlaak und Herr Rahles, dass Services \textit{\enquote{vernünftige Fehlermeldungen}} zurück geben sollten (siehe \combref{appendix:s-18} und \combref{appendix:r-34}).
+Herr Schlaak und Herr Rahles hoben ein gut implementiertes Fehlermanagement hervor. So beschrieben beide, dass Services \textit{\enquote{vernünftige Fehlermeldungen}} zurück geben sollten (siehe \combref{appendix:s-18} und \combref{appendix:r-34}).
 
-%Todo Schlussfolgerung der Robustheit von Schnittstellen hervorheben, sowie dass Services autak sein sollen.
-
-Die technischen Anforderungen Monitoring, Sicherheit und Fehlermanagement, lassen schlussfolgern, dass Kenntnisse in der Implementierung und Managen vorausgesetzt ist. Eine Aussage, die von Herrn Troppman noch einmal bestätigt wurde.\footnote{
+Die technischen Anforderungen Monitoring, Sicherheit und Fehlermanagement lassen schlussfolgern, dass Kenntnisse in der Implementierung und Managen vorhanden sein muss. Eine Aussage, die auch von Herrn Troppman bestätigt wurde.\footnote{
 \textit{\enquote{[…] es [braucht] einen Entwickler, der sich mit dem Aufbau der Infrastruktur auskennt.}} (siehe \combref{appendix:t-33})
 }
 
-Herr Rahles verstärkt ebenfalls diese Schlussfolgerung, indem er die \textit{\enquote{heutzutage geltenden Best Practices als Anforderung}} sieht (siehe \combref{appendix:r-26}). Er führt diese Bedingung jedoch noch weiter aus und zählt automatische Tests, sowie ein automatischer Integration- und Deployment-Prozess als erforderlich, um nicht Zeit beim Aussetzten des Systems zu verliehren (siehe \combref{appendix:r-27}).
+Herr Rahles bestärkte ebenfalls diese Schlussfolgerung, indem er die \textit{\enquote{heutzutage geltenden Best Practices als Anforderung}} nannte (siehe \combref{appendix:r-26}). Er führte diese Bedingung noch weiter aus und zählte automatische Tests, sowie einen automatischen Integration- und Deployment-Prozess zu den erforderlich Maßnamen (siehe \combref{appendix:r-27}).
 
 %Todo Folgerung über Technisches Wissen zum Aufbau und Implementierung einer solchen Infrastruktur
