Korrektur von Anne D zur Frage 5 wurde eingefuegt

--- a/sections/Methodik/ergebnisse/frage5.tex
+++ b/sections/Methodik/ergebnisse/frage5.tex
@@ -2,12 +2,12 @@
 
 \textit{Mit Ihrem aktuellen Wissensstand, welche Softwarearchitektur empfehlen Sie PluraPolit?}
 
-Alle drei Experten haben eine Monolith empfohlen (siehe \combref{appendix:t-36}, \combref{appendix:t-38} und \combref{appendix:s-31}).
+Alle drei Experten empfolen einen Monolithen (siehe \combref{appendix:t-36}, \combref{appendix:t-38} und \combref{appendix:s-31}).
 
-Alexander Troppman und Sebastian Schlaak haben weiterhin empfohlen das Backend und das Frontend voneinander zu trennen. So hat Sebastian Schlaak empfohlen im Frontend ein \textit{\enquote{modernes JavaScript Framework}} zu verwenden und das \textit{\enquote{Backoffice}}, der Mitarbeiter von der Darstellung der Endkunden zu trennen (siehe \combref{appendix:s-36}). Beide haben diesen Ansatz empfohlen, um die Flexibilität zu haben das Frontend bzw. das Backend auszutauschen.
+Alexander Troppman und Sebastian Schlaak haben weiterführend geraten, das Backend und das Frontend voneinander zu trennen. Herr Schlaaks Vorschlag war es, im Frontend ein \textit{\enquote{modernes JavaScript Framework}} zu verwenden und das \textit{\enquote{Backoffice}} der Mitarbeiter von der Darstellung der Endkunden zu trennen (siehe \combref{appendix:s-36}). Beide würden den Ansatz wählen, um die Flexibilität zu haben das Frontend bzw. das Backend auszutauschen.
 
-Sowohl Herr Rahles, als auch Herr Troppman haben angegeben, dass sie einen Monolithen empfehlen, da es keine separate Geschäftsdomäne gibt, die eine Aufteilung in Services rechtfertigt.\footnote{
+Sowohl Herr Rahles, als auch Herr Troppman gaben an, dass sie einen Monolithen empfehlen, da es keine separate Geschäftsdomäne gibt, die eine Aufteilung in Services rechtfertigt.\footnote{
 \textit{\enquote{Ich glaube, dass es keine separate Business Domain gibt, wo man sagt, die muss zwangsläufig ausgelagert werden.}} (siehe \combref{appendix:r-40}); \textit{\enquote{Ich sehe da vom fachlichen her nichts, was eine Microservicearchitektur rechtfertigt.}} (siehe \combref{appendix:t-37})
 }
 
-Des Weiteren hat Herr Rahles ein Monolithen empfohlen, da nicht genügend Entwickler vorhanden sind (siehe \combref{appendix:r-39}).
+Des Weiteren stand Herr Rahles der Umstellung zu Microservices ablehnend gegenüber, da nicht genügend Entwickler vorhanden waren (siehe \combref{appendix:r-39}).
